Fixed: footer spacing

--- a/src/containers/footer/footer.scss
+++ b/src/containers/footer/footer.scss
@@ -5,7 +5,7 @@
   background-color: #242424;
   min-width: 100%;
   bottom: 0;
-  margin-top: 75px;
+  margin-top: 160px;
   z-index: 4;
 
   @include media('<=iphoneplus') {
